# brickie

./: .gitignore  NOTICE  pyproject.toml
brickie/: __init__.py  bundle.py  cli.py  dev.py  env.py  serve.py
brickie/assets/: spinner.css
brickie/client/: __init__.py  esm.py  html.py  react.py  reloader.py  router.py  style.py  style.pyi
docs/: pyproject.toml.md
pyodide/: __init__.py
pyodide/ffi/: __init__.py  wrappers.py
tests/: conftest.py
tests/client/: test_client.py
tests/client/tests/: test_children_style.py  test_import_component.py  test_import_component_style.py  test_ref.py  test_root_style.py
tests/unit/: test_html.py  test_react_component.py  test_router.py  test_server.py
